# ClipForge

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.superpowers/sdd/: review-0202b63..462d2c4.diff
clipforge/: cli.py  clients.py  config.py  pipeline.py
clipforge/stages/: background.py  fetch.py  narrate.py  render.py  script.py  subtitles.py
docs/plans/: 2026-07-18-content-generation-pipeline.md
docs/specs/: 2026-07-18-content-generation-pipeline-design.md
tests/: test_background.py  test_cli.py  test_clients.py  test_config.py  test_fetch.py  test_narrate.py  test_pipeline.py  test_render.py  test_script.py  test_subtitles.py
