[project]
name = "clipforge"
version = "0.1.0"
description = "AI pipeline converting Reddit stories into portrait short-form videos"
requires-python = ">=3.9"
dependencies = [
    "praw>=7.7",
    "anthropic>=0.40",
    "elevenlabs>=1.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
clipforge = "clipforge.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["clipforge*"]
